<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common text -->
    <string name="app_name">OO Contact</string>
    <string name="preference_name">OO</string>
    <string name="sign_out">Sign Out</string>
    <string name="rank_app">Rank App</string>
    <string name="account">ACCOUNT</string>
	<string name="account_level">Account Level</string>
	<string name="account_upgrade">Upgrade Account</string>
    <string name="rank_app_hint">Rank app on google play</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_hint">Send an email to author (chenchuibo@gmail.com)</string>
    <!-- decription text , none display-->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    
    <!-- menu text -->
    <string name="action_settings">Settings</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_add_local_friend">Add local contact</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search Online</string>
    <string name="action_search_local">search on local</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_disable">Disable</string>
    <string name="action_enable">Enable</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="action_join">Join</string>
    <string name="action_my_contacts">Contacts</string>
    <string name="action_my_profile">Profile</string>
    <string name="action_group_profile">Group infos</string>
    <string name="action_inbox">Inbox</string>
    
    <!-- toast text -->
    <string name="send_valid_code">valid code has been send.</string>
    <string name="pls_input_correct_phone">pls input correct phone number.</string>
    <string name="notify_register"> Notify register </string>
    <string name="added_to_clip"> is Added to clipboard.</string>
    <string name="cannot_take_photo">Cannot take photo.</string>
    <string name="cannot_pick_picture">Cannot Pick Picture.</string>
    <string name="selected_empty">You must select at least one contact.</string>
    <string name="connect_server_err">Connect Server Error! </string>
    <string name="load_groups_err">Loading groups error! </string>
    <string name="load_err">load data error.</string>
    <string name="invalid">\tis Invalid </string>
    <string name="pls_input_correct"> Please input correctly. </string>
    <string name="pls_input_others"> Please input others. </string>
    <string name="empty">\tis Empty </string>     
    <string name="username_rule">\tcould not be null. </string>
    <string name="password_rule"> At least 6 characters. </string>
    <string name="load_contacts_err"> Load Contacts Error</string>
    <string name="loading_groups">Loading Groups</string>
    <string name="loading_contacts">Loading Contacts</string>
    <string name="loading">Loading..</string>
    <string name="processing">Processing..</string>
    <string name="searching">Searching.</string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="update"> Update </string>
    <string name="invalid_account">Invalid username and password combination.</string>
    <string name="success">Success.</string>
    <string name="waiting">Waiting.</string>
    <string name="hint_contacts_list"> Contacts List </string>
    <string name="request_have_send">Request have send.</string>
    <string name="group_name_empty">Please input name.</string>
    <string name="unsupport_type"> Unsupport Type </string>
    <string name="unsupport_action"> Unsupport Action </string>
    <!-- hint text -->
    <string name="hint_input_type">Address or Company etc.</string>
    <string name="hint_contact">Email or Numbers etc.</string>
    <string name="hint_action_search">Group Or Friend</string>
    <string name="hint_username">Username </string>
    <string name="hint_login_username">Username or Phone Number </string>
    <string name="hint_signup_username">Username(2~30 characters)</string>
    <string name="hint_signup_password">password(6~20 characters) </string>
    <string name="hint_reset_password">new password(6~20 characters) </string>
    <string name="hint_password"> Password </string>
    
    <string name="hint_email"> Email</string>
    <string name="hint_phone"> Phone Number</string>
    <string name="hint_valid_code">Valid Code</string>
    <string name="hint_group_name">Group name</string>
    <string name="hint_description">Description</string>
    <string name="hint_public_group">Anyone can find this group by search.</string>
     <string name="hint_priavte_group">None can join but invited.</string>   
    <!-- long text -->
    
    <!-- label / title text -->
    <string name="are_you_sure_to_delete_valid">Are you sure to delete this item？</string>
    <string name="refetch_valid_code">Refetch after %ds</string>
    <string name="fetch_valid_code">Fetch Valid Code</string>
    <string name="login_sina">Login with Sina</string>
    <string name="login_qq">Login with QQ</string>
    <string name="use_qq_profile">Use QQ Profile</string>
    <string name="contact_used_within_week"> Used last week </string>
    <string name="contact_used_within_month"> Used last month </string>
    <string name="contact_unused"> Unused </string>
    <string name="submit">Submit</string>
    <string name="members">Members</string>
    <string name="cancel">Cancel</string>
    <string name="add_contact">Add Contact</string>
    <string name="new_lable">New</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_picture">Pick Picture</string>
    <string name="choose_app">choose app</string>
    <string name="choose_email">Choose an email</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_pwd">Reset password </string>
    <string name="go_sign_up">Sign Up</string>
    <string name="go_sign_in">Sign In</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="ok">OK</string>
    <string name="email_label"> Email </string>
    <string name="phone_number_lable"> Phone Number </string>
    <string name="username_lable"> Username </string>
    <string name="password_lable"> Password </string>
    <string name="photo_lable"> Photo </string>
    <string name="gender_lable"> Gender </string>
    <string name="gender_female"> Female </string>
    <string name="gender_male"> Male </string>
    <string name="unset"> Unset </string>
    <string name="unknown">Unknown</string>
    <string name="gender_other"> Others </string>
    <string name="realname_lable"> Real Name </string>
    <string name="description_lable"> Description </string>
    <string name="re_try"> Retry </string>
    <string name="capatity_lable">Capatity</string>
    <string name="call_lable">Call</string>
    <string name="send_email_lable">Send Email</string>
    <string name="copy_lable">Copy</string>
    <string name="add_to_local_lable">Add to local</string>
    <string name="message_lable">Message</string>
    <string name="invite_lable">Invite</string>
    <string name="choose_action">Choose Action</string>
    <string name="choose_contacts">Choose Contacts</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="change_contacts">Change Contacts</string>
    <string name="search_lable">Search</string>
    <string name="search_people_lable">People</string>
    <string name="search_group_lable">Groups</string>
    <string name="group_lable">Group</string>
    <string name="view_group_lable">View Group</string>
    <string name="create_group_lable">Create Group</string>
    <string name="friends_list_lable">Friends</string>
    <string name="exit_group_lable">Exit Group</string>
    <string name="join_group_lable">Join Group</string>
    <string name="apart_group_lable">Apart Group</string>
    <string name="edit_group_lable">Edit Group</string>
    <string name="add_friend_lable">Add Friend</string>
    <string name="invite_friend_lable">Invite Friend</string>
    <string name="remove_friend_lable">Remove Friend</string>
    <string name="scontact_title">Scontact</string> 
    <string name="details_title">Details</string>
    <string name="friend_in_group_details_title">infos in %1$s .</string>
    <string name="discard_title">Discard</string> 
    <string name="setting_title">Setting</string>
    <string name="add_title"> Add </string>
    <string name="remote_contacts">Remote Contacts</string>
    <string name="local_contacts">Local Contacts</string>
    <string name="local_friends">Local </string>
    <string name="verify_lable">Who can Join </string>
    <string name="verify_by_anyone_lable">Anyone</string>
    <string name="verify_by_identify_lable">Identified</string>
    <string name="verify_by_none_lable">None</string>
    <string name="public_lable">Public</string>
    
    <!-- promote -->
    <string name="promote_email">I recommend the Scontact app for you.</string>
    <string name="promote_msg">I recommend the Scontact app for you.</string>
    <string name="promote_remove_friend">Are you sure to remove friend?</string>
    <string name="promote_remove_contact">Are you sure to remove this contact?</string>
    <string name="promote_apart_group">Are you sure to APART the group?</string>
    <string name="promote_exit_group">Are you sure to EXIT the group?</string>
    
    <!-- strings for empty list -->
    <string name="empty_search_result">Result is empty.</string>
    <string name="empty_friend_list">No friends data.</string>
    <string name="empty_contacts_list">No contacts data.\nPlease add your contacts first.</string>
    <!-- format strings -->
    <string name="selected_contacts">%d Contact(s) selected.</string>
    <string name="format_select_contact">Share some contacts to %s.</string>
    <string name="format_shared_contacts">%1$s Shares %2$d contact(s).</string>
    <string name="format_title_contacts"> %d Contact(s)</string>
    <string name="format_creator">Creator:%s</string>
    <string name="format_user_join_group">%1$s wanna join in group %2$s.</string>
    <string name="format_invite_user_join_group">%1$s hopes you join in group %2$s.</string>
    <string name="format_user_as_friend">%s wanna add you as a friend.</string>
</resources>
