<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:orientation="vertical"
    android:background="@drawable/pressor_bg_white_border"
    >
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:padding="6dp"
    	>
		<ImageView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/user_image"
		    android:gravity="center_vertical"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="20dp"
		    android:src="@drawable/ic_launcher"
		    android:scaleType="centerInside"
		    android:visibility="gone"
		    />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/user_image"
		    android:id="@+id/message_description"
		    android:gravity="center_vertical"
		    android:layout_centerVertical="true"
		    android:layout_below="@+id/message_time"
		    android:layout_marginTop="22dp"
		    android:layout_marginRight="20dp"
		    android:textSize="16sp"
		    android:text="@string/preference_name"/>
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/message_time"
		    android:gravity="center_vertical"
		    android:text="@string/preference_name"
		    style="@style/NoteTimeTextAppeare"
		    />
		<ImageView
		    android:src="@drawable/ic_action_next_item"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    />
		</RelativeLayout>
		<include layout="@layout/layout_divider"/>	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:id="@+id/rejuect"
	        android:text="@string/reject"
	        android:background="@drawable/pressor_blue_transparent"
	        android:padding="3dp"
	        style="@style/ButtonFull.RedText"
	        android:gravity="center"
	        />
	    <TextView
	        android:layout_width="1px"
	        android:layout_height="wrap_content"
	        android:background="@color/grey_a6"
	        android:padding="3dp"
	        style="@style/ButtonFull.BlueText"
	        />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/accept"
	        android:layout_weight="1"
	        android:id="@+id/accept"
	        android:background="@drawable/pressor_blue_transparent"
	        style="@style/ButtonFull.BlueText"
	        android:gravity="center"
	        android:padding="3dp"
	        />
	</LinearLayout>
</LinearLayout>
